--- a/CMU Intro to Database Systems/01 关系模式和关系代数.md
+++ b/CMU Intro to Database Systems/01 关系模式和关系代数.md
@@ -8,10 +8,10 @@ categories:
 tags:
 ---
 
-> 本文是卡内基梅隆大学（CMU）的公开课 《Database System》的课件的翻译。
-> 第一课：关系模型与关系代数
-> 原文链接：https://15445.courses.cs.cmu.edu/fall2021/notes/01-introduction.pdf
-> 课程视频：https://www.youtube.com/watch?v=v4bU6n97Vr8&list=PLSE8ODhjZXjZaHA6QcxDfJ0SIWBzQFKEG
+> 本文是卡内基梅隆大学（CMU）的公开课 《Database System》的课件的翻译   
+> 第一课：关系模型与关系代数   
+> 原文链接：https://15445.courses.cs.cmu.edu/fall2021/notes/01-introduction.pdf   
+> 课程视频：https://www.youtube.com/watch?v=v4bU6n97Vr8&list=PLSE8ODhjZXjZaHA6QcxDfJ0SIWBzQFKEG   
 
 ## 1 Databases
 数据库 (*database*) 是一个有组织的相互关联的数据集合，它用于对现实世界进行建模，例如建立学生与班级的关系模型，或者是一个数字音乐商店。我们口头上的叫法通常不会区分 “数据库” 与 “数据库管理系统 (*database management system*)” 之间的差别，实际上我们常用的数据库软件都应该被称作 “数据库管理系统”，而不是 “数据库”，这些软件有 MySQL、Oracle 和 MongoDB 等等，它们都是用来管理数据库的软件。
