--- a/CMU Intro to Database Systems/01 关系模式和关系代数.md
+++ b/CMU Intro to Database Systems/01 关系模式和关系代数.md
@@ -19,6 +19,20 @@ tags:
 思考一下如何建模一个数字音乐商店，在数据库中存放艺人和这些艺人发布的专辑。
 
 ## 2 Flat File Strawman
+先假设数据库管理系统里的数据库都是以 CSV 文件的形式存储的，每一个实体都存在他自己的文件里（实体是客观存在的事物，例如一个学生或者是一个教室，都是实体）。应用程序每次想要读取或者是更新时，都要解析整个文件。每一个实体可以拥有多个属性，因此在 CSV 文件中，每一行记录代表一个实体，而每一个记录中对应的属性使用逗号进行分隔。
+
+继续电子音乐商店的例子，它需要两个数据库文件，一个存艺人信息，另一个存专辑信息。一位艺人拥有名字、年龄和国籍等属性，而一张专辑拥有名字、艺人和发行日期等属性。
+
+> TODO: 提供点 CSV 表格的例子
+
+### CSV 文件作为数据库需要思考的问题
+* **数据完整性**
+  - ... 
+* **如何使用**
+  - ... 
+* **可靠性**
+  - ... 
+
 
 ## 3 Database Management System
 
